# BoostLocaleICUConan

./: .gitignore  CMakeLists.txt  CMakePresets.json  ConanPresets.json  README.md  conan_toolchain.cmake  conanfile.py  requirements.txt  test_locale.cpp
